kind/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: dev-container
  labels:
    app: dev-container
spec:
  containers:
  - name: dev
    image: xeyes:fun
    imagePullPolicy: Never
    command: [ 'sh', '-c', 'echo "Dev Container Running!" && sleep 3600' ]
  - name: xserver
    image: xserver:fun
    imagePullPolicy: Never
    ports:
      - containerPort: 6080
