kind/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novnc-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /vnc
        backend:
          service:
            name: vnc-service
            port:
              number: 6080
